[gd_scene load_steps=2 format=3 uid="uid://cdaysmobgb2ho"]

[ext_resource type="Script" path="res://test_scene.gd" id="1_iwkfn"]

[node name="TestScene" type="CanvasLayer"]
script = ExtResource("1_iwkfn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.0
offset_top = -29.0
offset_right = 147.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResultLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Результат"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RollButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Крутить барабан"

[node name="TriggerButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Нажать на курок"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/RollButton" to="." method="_on_roll_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TriggerButton" to="." method="_on_trigger_button_pressed"]
